fixed textwrap issue in dialogue box

--- a/docs/css/layout/chatbot-page/_chat-area.scss
+++ b/docs/css/layout/chatbot-page/_chat-area.scss
@@ -131,9 +131,11 @@
         background-color: var(--card-bg);
         width: 100%;
         padding: .75rem 1rem .75rem 1rem;
-        @media (width >= 800px) {
+
+        @media (width >=800px) {
             padding-bottom: 2rem;
         }
+
         overflow: visible;
 
         @media (width >=800px) {
@@ -263,7 +265,7 @@
         padding: 1.5rem;
         display: flex;
         flex-direction: column;
-        gap: 2rem; 
+        gap: 2rem;
 
         &::-webkit-scrollbar {
             width: 5px;
@@ -283,8 +285,10 @@
     .ai-chat-div {
         display: flex;
         gap: .5rem;
+        min-width: 0;
+        max-width: 100%;
 
-         > div:nth-of-type(1) {
+        >div:nth-of-type(1) {
             flex-shrink: 0;
         }
 
@@ -292,6 +296,11 @@
             color: var(--chat-dialogue-text);
             margin-bottom: .1rem;
             white-space: pre-wrap;
+            min-width: 0;
+            overflow-wrap: anywhere;
+            word-break: break-all;
+            white-space: pre-wrap;
+            max-width: 100%;
         }
 
         .chat-time {
@@ -307,8 +316,10 @@
     .user-chat-div {
         display: flex;
         gap: .5rem;
+        min-width: 0;
+        max-width: 100%;
 
-        > div:nth-of-type(1) {
+        >div:nth-of-type(1) {
             flex-shrink: 0;
         }
 
@@ -316,6 +327,11 @@
             color: var(--chat-dialogue-text);
             margin-bottom: .1rem;
             white-space: pre-wrap;
+            min-width: 0;
+            overflow-wrap: anywhere;
+            word-break: break-all;
+            white-space: pre-wrap;
+            max-width: 100%;
         }
 
         .chat-time {
